--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,4 +1,8 @@
-.header  {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
   font-family: monospace;
   background: papayawhip;
 }
@@ -22,4 +26,16 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+.left-links ul {
+  display: flex;
+  margin-left: -30px;
+  gap: 14px;
+}
+
+.right-links ul {
+  display: flex;
+  margin-right: 10px;
+  gap: 14px;
 }
